--- a/Learning C#/Ex_Files_Learning_C_Sharp/C# Notes/1.C#_Intro.md
+++ b/Learning C#/Ex_Files_Learning_C_Sharp/C# Notes/1.C#_Intro.md
@@ -192,3 +192,143 @@ Technology is always designed for a particular purpose. For example, the develop
 
 ![pic](https://dotnettutorials.net/wp-content/uploads/2022/07/dotnet-framework-compilers-and-their-extensions.png)
 
+
+# .NET Framework Architecture and Components
+## .Net Framework Architecture
+The two major components of the .NET Framework are the Common Language Runtime and the .NET Framework Class Library.
+1. **CLR**: The **Common Language Runtime (CLR)** is the execution engine that handles running applications. It provides services like thread management, garbage collection, type safety, exception handling, and more.
+2. **BCL**: The **Base Class Library** provides a set of APIs and types for common functionality. It provides types for strings, dates, numbers, etc. The Class Library includes APIs for reading and writing files, connecting to databases, drawing, and more.
+
+The .NET applications are written in C#, F#, or VB programming languages. The Source Code is compiled into an intermediate language code called **IL** or **MSIL** or **CIL** (Common Intermediate Language). And the Compiled code is stored in assemblies with **.DLL** or **.EXE** file extension.
+
+When an application runs, the **CLR** takes the Assembly (IL Code or MSIL Code, or CIL) and uses the **Just-in-Time compiler (JIT)** to convert the **MSIL** or **IL** code into machine code that can execute on the specific architecture of the computer it is running on.
+
+![pic](https://dotnettutorials.net/wp-content/uploads/2022/11/word-image-29911-1-1.png)
+
+## Applications Developed using .NET Framework
+The types of applications that can be built in the .Net framework are classified broadly into the following categories.
+
+**WinForms** – This is used for developing Forms-based applications, which would run on an end-user machine. Notepad is an example of a client-based application. Windows Forms is a smart client technology for the .NET Framework, a set of managed libraries that simplify common application tasks such as reading and writing to the file system.
+
+**ASP.NET** – This is used for developing web-based applications, which are made to run on any browser such as Edge, Chrome or Firefox. ASP.NET is a web framework designed and developed by Microsoft. It is used to develop websites, web applications, and web services. It provides a fantastic integration of HTML, CSS, and JavaScript. It was first released in January 2002.
+1. The Web application would be processed on a server, which would have Internet Information Services Installed.
+2. Internet Information Services or IIS is a Microsoft component that is used to execute an ASP.NET application.
+3. The result of the execution is then sent to the client machines, and the output is shown in the browser.
+
+**ADO.NET:** This technology is used to develop applications to interact with databases such as Oracle or Microsoft SQL Server. ADO.NET is a module of the .Net Framework, which is used to establish a connection between applications and data sources. Data sources can be such as SQL Server and XML. ADO .NET consists of classes that can be used to connect, retrieve, insert, and delete data.
+
+**WCF (Windows Communication Foundation):** It is a framework for building service-oriented applications. Using WCF, you can send data as asynchronous messages from one service endpoint to another.
+
+**LINQ (Language Integrated Query):** It is a query language, introduced in .NET 3.5 framework. It is used to make the query for data sources with C# or Visual Basics programming languages.
+
+**Entity Framework:** It is an ORM-based open-source framework that is used to work with a database using .NET objects. It eliminates a lot of developers’ effort to handle the database. It is Microsoft’s recommended technology to deal with the database.
+
+**Parallel LINQ:** Parallel LINQ or PLINQ is a parallel implementation of LINQ to objects. It combines the simplicity and readability of LINQ and provides the power of parallel programming. It can improve and provide fast speed to execute the LINQ query by using all available computer capabilities.
+
+# Introduction to C# Programming Language
+## Why did C#.NET come to the market?
+C#.NET Programming Language is mainly designed to overcome the disadvantages of C and C++ and to develop internet applications (web applications) by achieving platform independence.
+
+## Why C# is so much popular nowadays?
+C#.NET is so much popular nowadays because of the following reasons.
+
+### C# is Simple and Familiar:
+C# is simple because C# simplifies the programmer’s job by avoiding certain features of C and C++. C# avoids explicit memory management. Memory management in C# is automatic. It is done by CLR. So, there is no chance of memory leakage. There is a pointer concept in C# but it is restricted. C# is very familiar to programmers because it is modeled on the C and C++ languages. C# uses many features of C and C++; therefore, C# codes look like C and C++ codes. We can say C# is the simplified version of C and C++.
+
+### C# is Portable:
+Portability allows the programmer to write the same code for different machines (operating systems). C# provides portability in two ways:
+1. Source Code Portability
+2. IL Code Portability (DLL and EXE)
+
+In C#, we can write the source code in Multiple OS and get the output. Even though we can IL Code Portability is also available. So, once you have the DLL and EXE, then you can use those DLLs and EXEs on different OS and you can get the output as expected. Whereas in the case of C and C++ there is only source code portability.
+
+### C# is Architecturally Neutral:
+The behavior of C# programs doesn’t change when we move from one system to another which means it will provide the same output in every machine because in C# memory layout decisions are not made at compile time, it is made at run time by CLR. It is because of CTS (Common Type System) and in our coming session we will discuss it in detail. But in the case of C and C++ programs, the behavior changes when we move the program from one system to another and the reason for this is the size of data types varies from OS to OS.
+
+### C# is Secured:
+C# is secured because the C# programs are executed in a secured environment called CLR. CLR will provide security to the C# programs.
+
+### C# is Robust:
+Robust means Strong. C# is a strong type-checking language having strict type-checking during both compilation time and execution time which allows us to develop error-free applications and programs.
+
+### C# is Distributed:
+Using C# Programming Language, we can develop distributed applications whose resources are shared by more than one client. An application or program whose resources are shared by more than one client is called a distributed application. As C# is used for developing such applications for example WCF Applications, Restful Services, etc. So, C# is a distributed programming language.
+
+### C# is Multithreaded:
+A process is divided into several small parts known as threads or lightweight processes. Sending multiple threads to the processor for processing is known as multithreading. Multi-threading means handling multiple tasks simultaneously. For example, we can listen to music while scrolling a page and at the same time we can download an application from the internet on a computer. 
+
+If multiple threads are used to execute your application code, then it is called Multithreading. Multithreading is a mechanism to implement Concurrent Programming where multiple threads execute the code simultaneously. And using C# Programming language we can develop multithread applications. So, C# supports multithreaded programming.
+
+### C# is Dynamic:
+C# 4.0 introduced a new type called dynamic that avoids compile-time type checking. A dynamic type escapes type checking at compile-time; instead, it resolves the type at run time. So, if you don’t know the type of data that you want to store, then you can use dynamic as the data type, and at runtime based on value or data, the type will automatically resolve. So, C# is dynamic.
+
+### C# is Compiled and Interpreted:
+We know a programming language is either compiled or interpreted. But C# combines both approaches. That’s why C# is called a two-stage system.
+
+First C# compiler CSC translates source code into an intermediate language code known as MSIL (Microsoft Intermediate Language) or CIL (Common Intermediate Language) code. But these MSIL or CIL or IL codes are not machine instructions. So, in the second stage, these MSIL or CIL, or IL codes are interpreted by the C# interpreter (One Component of CLR called JIT- Just in Time Compiler). As a result, machine instructions will be generated which are directly executed by the machine. Hence, we are saying C# is both interpreted and compiled language.
+
+### C# is Object-Oriented:
+Except for the primitive data types, all elements in C# are objects. Object-oriented is not a programming language, it is a programming technique or concept, or principle which defines a set of rules and regulations for organizing the data and instructions. The concepts provided by oops are as follows:
+1. Encapsulation
+2. Abstraction
+3. Polymorphism
+4. Inheritance
+
+The Programming Language which supports these four features is known as an Object-Oriented Programming Language. And C# Programming Language supports these four features, so C# is Object-Oriented.
+
+### C# is Platform Independent:
+Many Programming Languages are compatible with only one platform. Now, with the introduction of **.NET Core** or **.NET**, C# was specifically designed to be platform-independent. C# applications with .NET Core or .NET can be run on **Windows**, **Linux**, and **Mac** operating systems. So, we can say C# is Platform Independent with .NET Core or .NET.
+
+### Automatic Memory Management:
+The .NET Framework automatically manages memory allocation and de-allocation for objects. When a dot net application runs, lots of objects are created. At a given point in time, it is possible that some of those objects are not used by the application. Garbage Collector in .NET Framework is nothing but a Small Routine or you can say it is a Background Process that runs periodically and try to identify what objects are not being used currently by the application and de-allocates the memory of those objects. So, as a developer, we need not worry about how memory allocation and deallocation are done in .NET Applications.
+
+### Exception Handling:
+C# Provides Strong Exception Handling Features which can be used to stop the Abnormal Termination of the program and you can also provide user-understandable messages when an exception is raised.
+
+### C# Definition based on the above features:
+**C# is just a Simple, Secure, Robust, Portable, Platform-Independent, Architectural Neutral, Multithreaded, Automatic Memory Management, Object-Oriented Programming Language with a strong type Exception Handling mechanism for developing different kinds of applications such as Web, Windows Form, Console, Web Services, Mobile Apps, etc. which can be run on different Operating Systems such as Windows, Linus, and Mac.**
+
+## Features of C#
+Although C# constructs closely follow traditional high-level languages, C and C++ and being an object-oriented programming languages. It has a strong resemblance with Java, it has numerous strong programming features that make it endearing to a number of programmers worldwide. Following is the list of a few important features of C#:
+1. **Simple**: C# is a simple language in the sense that it provides a structured approach (to break the problem into parts), a rich set of library functions, data types, etc.
+2. **Modern Programming Language**: C# programming is based upon the current trend and it is very powerful and simple for building scalable, interoperable, and robust applications.
+3. **Object-Oriented**: C# is an object-oriented programming language. OOPs makes development and maintenance easier whereas in Procedure-oriented programming language it is not easy to manage if code grows as the project size grows.
+4. **Type-Safe**: C# type safe code can only access the memory location that it has permission to execute. Therefore, it improves the security of the program.
+5. **Interoperability**: The interoperability process enables the C# programs to do almost anything that a native C++ application can do.
+6. **Scalable and Updateable**: C# is an automatic scalable and updateable programming language. For updating our application, we delete the old files and update them with new ones.
+7. **Component Oriented**: C# is a component-oriented programming language. It is the predominant software development methodology used to develop more robust and highly scalable applications.
+8. **Structured Programming Language**: C# is a structured programming language in the sense that we can break the program into parts using functions. So, it is easy to understand and modify.
+9. **Rich Library**: C# provides a lot of inbuilt functions that make development fast.
+10. **Fast Speed**: The compilation and execution time of the C# language is fast.
+
+## Types of Applications Developed using C#:
+With the help of the C# programming language, we can develop different types of secured and robust applications:
+1. **Window applications**
+2. **Web applications**
+3. **Distributed applications**
+4. **Web service applications**
+5. **Database applications**
+6. **Mobile Applications, etc**
+
+## What can C# do for us?
+Well, the answer is, a lot. I would say, nearly anything. C# can be used to write Windows clients Applications, Web applications, Mobile Apps, Enterprise Software, Backend, and Service-Oriented Applications. The following image demonstrates the C# world and applications ecosystem. The following image demonstrates the C# world and applications ecosystem.
+
+![pic](https://dotnettutorials.net/wp-content/uploads/2022/04/c-applications-ecosystem.jpeg)
+
+As you can see from the above image, the C# language can be used to build any and all kinds of applications. Not only Windows or Web applications but C# can be used to build mobile, Windows Store, and Enterprise applications. C# can also be used within the SQL Server database to build reports, jobs, and modules to do the backend work. Here is a list of types of applications C# can develop.
+ 1. Cloud-native apps and services 
+ 2. Windows client applications
+ 3. Windows libraries and components
+ 4. Windows services
+ 5. Web applications
+ 6. Web services and Web API
+ 7. Native iOS and Android mobile apps
+ 8. Backend services
+ 9. Azure cloud applications and services
+10. Backend database using ML/Data tools
+11. Interoperability software such as Office, SharePoint, SQL Server, and so on.
+12. Artificial Intelligence and Machine learning
+13. Blockchains and distributed ledger technology including cryptocurrency
+14. Internet of Things (IoT) devices
+15. Gaming consoles and gaming systems
+16. Video games
