--- a/Learning C#/Ex_Files_Learning_C_Sharp/Entity Framework/2. EF 6 Code-First/5. Data_Anotations_Attributes.md
+++ b/Learning C#/Ex_Files_Learning_C_Sharp/Entity Framework/2. EF 6 Code-First/5. Data_Anotations_Attributes.md
@@ -241,3 +241,566 @@ public class Student
 The above code creates composite primary key columns `StudentKey` and `AdmissionNum` in the `Students` table as shown below:
 
 ![pic](https://www.entityframeworktutorial.net/images/codefirst/composite-key.png)
+
+
+## NotMapped Attribute in EF 6 & EF Core
+The NotMapped attribute can be applied to properties of an entity class for which we do not want to create corresponding columns in the database. By default, EF creates a column for each property (must have get; & set;) in an entity class. The `[NotMapped]` attribute overrides this default convention. You can apply the `[NotMapped]` attribute on one or more properties for which you do NOT want to create a corresponding column in a database table.
+
+NotMapped Attribute: `[NotMapped()]`
+
+```cs
+using System.ComponentModel.DataAnnotations.Schema;
+
+public class Student
+{
+    public int StudentId { get; set; }
+    public string StudentName { get; set; }
+        
+    [NotMapped]
+    public int Age { get; set; }
+}
+```
+
+In the above example, the `[NotMapped]` attribute is applied to the `Age` property of the `Student` class. So, EF will not create a column to store Age information in the Student db table, as shown below:
+
+![pic](https://www.entityframeworktutorial.net/images/codefirst/notmapped-attribute.png)
+
+**Note:** EF also does not create a column for a property which does not have either getters or setters. For example, EF will not create columns for the following `City` and `Age` properties:
+
+```cs
+using System.ComponentModel.DataAnnotations;
+
+public class Student
+{
+    private int _age = 0;
+
+    public int StudentId { get; set; }
+    public string StudentName { get; set; }
+    public string City { get{ return StudentName;}  }
+    public int Age { set{ _age = value;}  }
+}
+```
+
+## ForeignKey Attribute in EF 6 & EF Core
+The ForeignKey attribute is used to configure a foreign key in the relationship between two entities in EF 6 and EF Core. It overrides the default conventions. As per the default convention, **EF makes a property as foreign key property when its name matches with the primary key property of a related entity**.
+
+ForeignKey Signature: `[ForeignKey(name string)]`
+
+* name: Name of the associated navigation property or the name of the associated foreign key(s).
+Consider the following example of a one-to-many relationship among entities.
+
+```cs
+using System.ComponentModel.DataAnnotations.Schema;
+
+public class Student
+{
+    public int StudentID { get; set; }
+    public string StudentName { get; set; }
+        
+    //Foreign key for Standard
+    public int StandardId { get; set; }
+    public Standard Standard { get; set; }
+}
+
+public class Standard
+{
+    public int StandardId { get; set; }
+    public string StandardName { get; set; }
+    
+    public ICollection<Student> Students { get; set; }
+}
+```
+
+The above example depicts a one-to-many relationship between the `Student` and `Standard` entities. To represent this relationship, the `Student` class includes a property `StandardId` with reference property `Standard`, and the `Standard` entity class includes collection navigation property `Students`. A property name `StandardId` in `Student` entity matches with the primary key property of `Standard` entity, so `StandardId` in `Student` entity will automatically become a foreign key property and the corresponding column in the db table will also be a foreign key column, as shown below:
+
+![pic](https://www.entityframeworktutorial.net/images/codefirst/foreignkey-attribute-1.png)
+
+The `[ForeignKey]` attribute overrides the default convention for a foreign key It allows us to specify the foreign key property in the dependent entity whose name does not match with the primary key property of the principal entity.
+
+The `[ForeignKey(name)]` attribute can be applied in three ways:
+1. `[ForeignKey(NavigationPropertyName)]` on the foreign key scalar property in the dependent entity.
+2. `[ForeignKey(ForeignKeyPropertyName)]` on the related reference navigation property in the dependent entity.
+3. `[ForeignKey(ForeignKeyPropertyName)]` on the navigation property in the principal entity.
+
+### [ForeignKey] on the foreign key property in the dependent entity
+The [ForeignKey] on the foreign key property in the dependent entity and the related navigation property name can be specified as a parameter as shown below:
+
+```cs
+using System.ComponentModel.DataAnnotations.Schema;
+
+public class Student
+{
+    public int StudentID { get; set; }
+    public string StudentName { get; set; }
+        
+    [ForeignKey("Standard")]
+    public int StandardRefId { get; set; }
+    public Standard Standard { get; set; }
+}
+
+public class Standard
+{
+    public int StandardId { get; set; }
+    public string StandardName { get; set; }
+    
+    public ICollection<Student> Students { get; set; }
+}
+```
+
+In the above example, the `[ForeignKey]` attribute is applied on the `StandardRefId` and specified in the name of the navigation property `Standard`. This will create the foreign key column named `StandardRefId` in the `Students` table, preventing the generation of a `StandardId` column in the database.
+
+![pic](https://www.entityframeworktutorial.net/images/codefirst/foreignkey-attribute-2.png)
+
+## `[ForeignKey]` on the navigation property in the dependent entity
+The `[ForeignKey]` attribute can be applied to the navigation property and the related foreign key property name can be specified as shown below:
+
+```cs
+using System.ComponentModel.DataAnnotations.Schema;
+
+public class Student
+{
+    public int StudentID { get; set; }
+    public string StudentName { get; set; }
+        
+    public int StandardRefId { get; set; }
+    
+    [ForeignKey("StandardRefId")]
+    public Standard Standard { get; set; }
+}
+
+public class Standard
+{
+    public int StandardId { get; set; }
+    public string StandardName { get; set; }
+    
+    public ICollection<Student> Students { get; set; }
+}
+```
+
+In the above example, the `[ForeignKey]` attribute is applied on the `Standard` navigation property and the name of the foreign key property `StandardRefId` is specified. This will create the foreign key column named `StandardRefId` in the `Students` table, preventing the generation of a `StandardId` column in the database.
+
+### `[ForeignKey]` on the navigation property in the principal entity
+The `[ForeignKey]` attribute can be applied to the navigation property in the principal entity and the related foreign key property name can be specified in the dependent entity, as shown below:
+
+```cs
+using System.ComponentModel.DataAnnotations.Schema;
+
+public class Student
+{
+    public int StudentID { get; set; }
+    public string StudentName { get; set; }
+        
+    public int StandardRefId { get; set; }
+    public Standard Standard { get; set; }
+}
+
+public class Standard
+{
+    public int StandardId { get; set; }
+    public string StandardName { get; set; }
+    
+    [ForeignKey("StandardRefId")]
+    public ICollection<Student> Students { get; set; }
+}
+```
+In the above example, the `[ForeignKey]` attribute is applied on the Students navigation property in the principal entity `Standard`. This will create a foreign key column `StandardRefId` in the Students table in the database.
+
+## Index Attribute
+Entity Framework 6 provides the `[Index]` attribute to create an index on a particular column in the database, as shown below:
+
+```cs
+class Student
+{
+    public int Student_ID { get; set; }
+    public string StudentName { get; set; }
+        
+    [Index]
+    public int RegistrationNumber { get; set; }
+}
+```
+
+## InverseProperty Attribute in EF 6 & EF Core
+The InverseProperty attribute is used when two entities have more than one relationship. To understand the InverseProperty attribute, consider the following example of `Course` and `Teacher` entities.
+
+```cs
+public class Course
+{
+    public int CourseId { get; set; }
+    public string CourseName { get; set; }
+    public string Description { get; set; }
+
+    public Teacher OnlineTeacher { get; set; }
+}
+
+public class Teacher
+{
+    public int TeacherId { get; set; }
+    public string Name { get; set; }
+
+    public ICollection<Course> OnlineCourses { get; set; }
+}
+```
+
+In the above example, the `Course` and `Teacher` entities have a one-to-many relationship where one teacher can teach many different online courses. As per the default conventions in EF 6 and EF Core, the above example would create the following tables in the database:
+
+![pic](https://www.entityframeworktutorial.net/images/codefirst/teachercourse.png)
+
+Now, suppose we add another one-to-many relationship between the `Teacher` and `Course` entities as below:
+
+```cs
+public class Course
+{
+    public int CourseId { get; set; }
+    public string CourseName { get; set; }
+    public string Description { get; set; }
+
+    public Teacher OnlineTeacher { get; set; }
+    public Teacher ClassRoomTeacher { get; set; }
+}
+
+public class Teacher
+{
+    public int TeacherId { get; set; }
+    public string Name { get; set; }
+
+    public ICollection<Course> OnlineCourses { get; set; }
+    public ICollection<Course> ClassRoomCourses { get; set; }
+}
+```
+In the above example, the `Course` and `Teacher` entities have two one-to-many relationships. A `Course` can be taught by an online teacher as well as a class-room teacher. In the same way, a `Teacher` can teach multiple online courses as well as class room courses.
+
+Here, EF API cannot determine the other end of the relationship. It will throw the following exception for the above example during migration.
+
+**Unable to determine the relationship represented by navigation property `Course.OnlineTeacher` of type `Teacher`. Either manually configure the relationship, or ignore this property using the `[NotMapped]` attribute or by using `EntityTypeBuilder.Ignore` in `OnModelCreating`**.
+
+However, EF 6 will create the following Courses table with four foreign keys:
+
+![pic](https://www.entityframeworktutorial.net/images/codefirst/inverseproperty1.png)
+
+To solve this issue, use the `[InverseProperty]` attribute in the above example to configure the other end of the relationship as shown below:
+
+```cs
+public class Course
+{
+    public int CourseId { get; set; }
+    public string CourseName { get; set; }
+    public string Description { get; set; }
+
+    public Teacher OnlineTeacher { get; set; }
+    public Teacher ClassRoomTeacher { get; set; }
+}
+
+public class Teacher
+{
+    public int TeacherId { get; set; }
+    public string Name { get; set; }
+
+    [InverseProperty("OnlineTeacher")]
+    public ICollection<Course> OnlineCourses { get; set; }
+    [InverseProperty("ClassRoomTeacher")]
+    public ICollection<Course> ClassRoomCourses { get; set; }
+}
+```
+In the above example, the `[InverseProperty]` attribute is applied on two collection navigation properties `OnlineCourses` and `ClassRoomCourses` to specify their related navigation property in the `Course` entity. So now, EF will be able to figure out corresponding foreign key names. EF 6 creates foreign keys `OnlineTeacher_TeacherId` and `ClassRoomTeacher_TeacherId`. EF Core creates `OnlineTeacherTeacherId` and `ClassRoomTeacherTeacherId` as shown below:
+
+![pic](https://www.entityframeworktutorial.net/images/codefirst/inverseproperty2.png)
+
+You can use the `[ForeignKey]` attribute to configure the foreign key name as shown below:
+
+```cs
+public class Course
+{
+    public int CourseId { get; set; }
+    public string CourseName { get; set; }
+    public string Description { get; set; }
+
+    [ForeignKey("OnlineTeacher")]
+    public int? OnlineTeacherId { get; set; }
+    public Teacher OnlineTeacher { get; set; }
+
+    [ForeignKey("ClassRoomTeacher")]
+    public int? ClassRoomTeacherId { get; set; }
+    public Teacher ClassRoomTeacher { get; set; }
+}
+
+public class Teacher
+{
+    public int TeacherId { get; set; }
+    public string Name { get; set; }
+
+    [InverseProperty("OnlineTeacher")]
+    public ICollection<Course> OnlineCourses { get; set; }
+    [InverseProperty("ClassRoomTeacher")]
+    public ICollection<Course> ClassRoomCourses { get; set; }
+}
+```
+The above example will result in the following tables in the database:
+
+![pic](https://www.entityframeworktutorial.net/images/codefirst/inverseproperty3.png)
+
+Thus, you can use the *InverseProperty* and *ForeignKey* attributes to configure multiple relationships between the same entities.
+
+
+## Required Attribute in EF 6 & EF Core
+The `Required` attribute can be applied to one or more properties in an entity class. EF will create a NOT NULL column in a database table for a property on which the `Required` attribute is applied.
+
+```cs
+using System.ComponentModel.DataAnnotations;
+    
+public class Student
+{
+    public int StudentID { get; set; }
+    [Required]
+    public string StudentName { get; set; }
+}
+```
+In the above code, the `Required` attribute is applied to the StudentName property. So, EF API will create a NOT NULL StudentName column in the Students table, as shown below:
+
+![pic](https://www.entityframeworktutorial.net/images/codefirst/required-attribute.png)
+
+Now, if you try to save the `Student` entity without assigning a value to the `StudentName` property then EF 6 will throw the `System.Data.Entity.Validation.DbEntityValidationException` exception, while EF Core will throw the `Microsoft.EntityFrameworkCore.DbUpdateException` exception.
+
+**Note:** The `Required` attribute can also be used with ASP.Net MVC as a validation attribute. Visit ![Implement Validations in ASP.NET MVC](https://www.tutorialsteacher.com/mvc/implement-validation-in-asp.net-mvc) for more information.
+
+## MaxLength Attribute in EF 6 & EF Core
+The MaxLength attribute specifies the maximum length of data value allowed for a property which in turn sets the size of a corresponding column in the database. It can be applied to the `string` or `byte[]` properties of an entity.
+
+```cs
+using System.ComponentModel.DataAnnotations;
+    
+public class Student
+{
+    public int StudentID { get; set; }
+    [MaxLength(50)]
+    public string StudentName { get; set; }
+        
+}
+```
+In the above example, the `MaxLength(50)` attribute is applied on the `StudentName` property which specifies that the value of `StudentName` property cannot be more than 50 characters long. This will create a `StudentName` column with `nvarchar(50)` size in the SQL Server database, as shown below:
+
+![pic](https://www.entityframeworktutorial.net/images/codefirst/maxlength.png)
+
+Entity Framework also validates the value of a property for the `MaxLength` attribute if you set a value higher than the specified size. For example, if you set more than 50 characters long string value, then EF 6 will throw `System.Data.Entity.Validation.DbEntityValidationException` and EF Core will throw `Microsoft.EntityFrameworkCore.DbUpdateException`.
+
+**Note:** The MaxLength attribute can also be used in ASP.NET MVC to validate the value of a property. Visit ![Implement Validations in ASP.NET MVC](https://www.tutorialsteacher.com/mvc/implement-validation-in-asp.net-mvc) for more information.
+
+
+## StringLength Attribute in EF 6 & EF Core
+The StringLength attribute can be applied to the `string` properties of an entity class. It specifies the maximum characters allowed for a string property which in turn sets the size of a corresponding column (`nvarchar` in SQL Server) in the database.
+
+```cs
+using System.ComponentModel.DataAnnotations;
+
+public class Student
+{
+    public int StudentID { get; set; }
+    [StringLength(50)]
+    public string StudentName { get; set; }
+}
+```
+As you can see in the above code, we have applied the `StringLength` attribute to a `StudentName` property. So, EF will create a `StudentName` column with `nvarchar(50)` size in the database, as shown below:
+
+![pic](https://www.entityframeworktutorial.net/images/codefirst/maxlength.png)
+
+Entity Framework also validates the value of a property for the `StringLength` attribute if you set a value higher than the specified size. For example, if you set the string value to more than 50 characters, then EF 6 will throw `System.Data.Entity.Validation.DbEntityValidationException` and EF Core will throw `Microsoft.EntityFrameworkCore.DbUpdateException`.
+
+**Note:** The StringLength attribute can also be used in ASP.NET MVC to validate the value of a property. Visit ![Implement Validations in ASP.NET MVC](https://www.tutorialsteacher.com/mvc/implement-validation-in-asp.net-mvc) for more information.
+
+
+## Timestamp Attribute in EF 6 & EF Core
+EF 6 and EF Core both include the `Timestamp` data annotation attribute. It can only be applied once in an entity class to a byte array type property. It creates a column with `timestamp` data type in the SQL Server database. Entity Framework API automatically uses this Timestamp column in concurrency check on the UPDATE statement in the database.
+
+```cs
+using System.ComponentModel.DataAnnotations;
+
+public class Student
+{
+    public int StudentId { get; set; }
+    public string StudentName { get; set; }
+        
+    [Timestamp]
+    public byte[] RowVersion { get; set; }
+}
+```
+In the above example, the `Timestamp` attribute is applied to the `byte[]` property of the `Student` entity. So, EF will create a column named RowVersion with `timestamp` data type in the `Students` table in the SQL Server database, as shown below:
+
+![pic](https://www.entityframeworktutorial.net/images/codefirst/timestamp-attribute.png)
+
+This `timestamp` column will be included in the where clause whenever you update an entity and call the `SaveChanges` method.
+
+```cs
+using(var context = new SchoolContext()) 
+{
+    var std = new Student()
+    {
+        StudentName = "Bill"
+    };
+
+    context.Students.Add(std);
+    context.SaveChanges();
+
+    std.StudentName = "Steve";
+    context.SaveChanges();
+}
+```
+
+The above code will execute the following UPDATE statement in the database.
+
+exec sp_executesql N'UPDATE [dbo].[Students]
+SET [StudentName] = @0
+WHERE (([StudentId] = @1) AND ([RowVersion] = @2))
+SELECT [RowVersion]
+FROM [dbo].[Students]
+WHERE @@ROWCOUNT > 0 AND [StudentId] = @1',N'@0 nvarchar(max) ,@1 int,@2 binary(8)',@0=N'Steve',@1=1,@2=0x00000000000007D1
+go
+
+
+## DatabaseGenerated Attribute in EF 6 & EF Core
+As you know, EF creates an IDENTITY column in the database for all the id (key) properties of the entity, by default. So, the underlying database generates a value for this column on each insert command, e.g., SQL Server creates an integer IDENTITY column with identity seed and increment to 1.
+
+EF 6 and EF Core provide the DatabaseGenerated data annotation attribute to configure how the value of a property will be generated. The DatabaseGenerated attribute takes one out of the following three DatabaseGeneratedOption enum values:
+1. DatabaseGeneratedOption.None
+2. DatabaseGeneratedOption.Identity
+3. DatabaseGeneratedOption.Computed
+
+### DatabaseGeneratedOption.None
+`DatabaseGeneratedOption.None` option specifies that the value of a property will not be generated by the underlying database. This will be useful to override the default convention for the id properties.
+
+For example, if you want to provide your own values to id properties instead of database generated values, use the None option, as shown below:
+
+```cs
+public class Course
+{
+    [DatabaseGenerated(DatabaseGeneratedOption.None)]
+    public int CourseId { get; set; }
+    public string CourseName { get; set; }
+}
+```
+In the above example, EF will create the CourseId column in the database and will not mark it as an IDENTITY column. So, each time you will have to provide the value of the `CourseId` property before calling the `SaveChanges()` method.
+
+```cs
+using (var context = new SchoolContext())
+{
+    // you must provide the unique CourseId value
+    var maths = new Course(){ CourseId=1,  CourseName="Maths"};
+    context.Courses.Add(maths);
+
+    // you must provide the unique CourseId value
+    var eng = new Course(){ CourseId=2,  CourseName="English"};
+    context.Courses.Add(eng);
+
+    // the following will throw an exception as CourseId has duplicate value
+    //var sci = new Course(){ CourseId=2,  CourseName="sci"};
+
+    context.SaveChanges();
+}
+```
+**Note:** EF will throw an exception if you do not provide unique values each time because `CourseId` is a primary key property.
+Use the `ValueGeneratedNever()` method of Fluent API to specify an Identity property in EF Core, as shown below:
+
+```cs
+modelBuilder.Entity<Course>()
+    .Property(p => p.CourseId)
+    .ValueGeneratedNever();
+```
+### DatabaseGeneratedOption.Identity
+You can mark the non-key (non-id) properties as DB-generated properties by using the `DatabaseGeneratedOption.Identity` option. This specifies that the value of the property will be generated by the database on the INSERT statement. This Identity property cannot be updated.
+
+Please note that the way the value of the Identity property will be generated by the database depends on the database provider. It can be identity, rowversion or GUID. SQL Server makes an identity column for an integer property.
+
+```cs
+public class Course
+{
+    public int CourseId { get; set; }
+    public string CourseName { get; set; }
+
+    [DatabaseGenerated(DatabaseGeneratedOption.Identity)]
+    public int RecordNum { get; set; }
+}
+```
+In the above example, the RecordNum property will be an identity property. This means that EF will create an IDENTITY column in the SQL Server database for this property.
+
+Use the `ValueGeneratedOnAdd()` method of Fluent API to specify an Identity property in EF Core, as shown below:
+
+```cs
+modelBuilder.Entity<Course>()
+    .Property(p => p.RecordNum)
+    .ValueGeneratedOnAdd();
+```
+
+### DatabaseGeneratedOption.Compute
+DatabaseGeneratedOption.Compute specifies that the value of the property will be generated by the underlying database on insert and then, on each subsequent update.
+Same as Identity, the way the database generates the value depends on the database provider. You may configure a default value or use a trigger for this computed column.
+
+Consider the following example:
+
+```cs
+public class Student
+{
+    public int StudentID { get; set; }
+    public string StudentName { get; set; }
+    public DateTime? DateOfBirth { get; set; }
+    public decimal Height { get; set; }
+    public float Weight { get; set; }
+
+    [DatabaseGenerated(DatabaseGeneratedOption.Computed)]
+    public DateTime CreatedDate { get; set; }
+} 
+```
+
+In the above example, the `CreatedDate` property is marked with the `DatabaseGeneratedOption.Computed` option. This tells EF that values are generated for this column in the database. However, EF does not guarantee that it will setup the actual mechanism to generate values. Here, we will specify date function of SQL Server which will generate current date-time value on INSERT command, as shown below:
+
+```cs
+protected override void OnModelCreating(ModelBuilder modelBuilder)
+{
+            
+    modelBuilder.Entity<Student>()
+            .Property(s => s.CreatedDate)
+            .HasDefaultValueSql("GETDATE()");
+}
+```
+The above code set the SQL Server function `GETDATE()` as a default value SQL which will insert the current date and time on each INSERT command.
+**Note:** EF does not include DatabaseGeneratedOption.Computed columns in INSERT or UPDATE statements.
+
+
+## ConcurrencyCheck Attribute in EF 6 & EF Core
+The ConcurrencyCheck attribute can be applied to one or more properties in an entity class in EF 6 and EF Core. When applied to a property, the corresponding column in the database table will be used in the optimistic concurrency check using the `where` clause.
+
+```cs
+using System.ComponentModel.DataAnnotations;
+
+public class Student
+{
+    public int StudentId { get; set; }
+     
+    [ConcurrencyCheck]
+    public string StudentName { get; set; }
+}
+```
+In the above example, the `ConcurrencyCheck` attribute is applied to the `StudentName` property of the `Student` entity class. So, EF will include the `StudentName` column in the UPDATE statement to check for optimistic concurrency. Consider the following example:
+
+```cs
+using(var context = new SchoolContext()) 
+{
+    var std = new Student()
+    {
+        StudentName = "Bill"
+    };
+
+    context.Students.Add(std);
+    context.SaveChanges();
+
+    std.StudentName = "Steve";
+    context.SaveChanges();
+}
+```
+The above example will execute the following UPDATE statement on `SaveChanges()`, where it includes `StudentName` in the `where` clause.
+
+```cs
+exec sp_executesql N'UPDATE [dbo].[Students]
+SET [StudentName] = @0
+WHERE (([StudentId] = @1) AND ([StudentName] = @2))
+',N'@0 nvarchar(max) ,@1 int,@2 nvarchar(max) ',@0=N'Steve',@1=1,@2=N'Bill'
+go            
+```
+**Note:** The ![Timestamp](https://www.entityframeworktutorial.net/code-first/TimeStamp-dataannotations-attribute-in-code-first.aspx) attribute can only be applied to a single byte array property, whereas the ConcurrencyCheck attribute can be applied to any number of properties with any data type.
