--- a/Learning C#/Ex_Files_Learning_C_Sharp/Entity Framework/2. EF 6 Code-First/14. Seed Data.md
+++ b/Learning C#/Ex_Files_Learning_C_Sharp/Entity Framework/2. EF 6 Code-First/14. Seed Data.md
@@ -1,7 +1,7 @@
 # Seed Data in EF 6 Code-First
 You can insert data into your database tables during the database initialization process. This will be important if you want to provide some test data for your application or some default master data for your application.
 
-To seed data into your database, you have to create a custom DB initializer, as you created in the ![DB Initialization Strategy](https://www.entityframeworktutorial.net/code-first/database-initialization-strategy-in-code-first.aspx) chapter, and override the Seed method. The following example shows how you can provide default data for the Standard table while initializing the School database:
+To seed data into your database, you have to create a custom DB initializer, as you created in the [DB Initialization Strategy](https://www.entityframeworktutorial.net/code-first/database-initialization-strategy-in-code-first.aspx) chapter, and override the Seed method. The following example shows how you can provide default data for the Standard table while initializing the School database:
 
 ```cs
 public class SchoolDBInitializer : DropCreateDatabaseAlways<SchoolDBContext>
