--- a/Learning C#/Ex_Files_Learning_C_Sharp/Entity Framework/2. EF 6 Code-First/1. Install_EF.md
+++ b/Learning C#/Ex_Files_Learning_C_Sharp/Entity Framework/2. EF 6 Code-First/1. Install_EF.md
@@ -17,7 +17,7 @@ The development workflow in the code-first approach would be: Create or modify d
 ## EF Code-First Example
 Let's assume that we want to create a simple application for XYZ School. Users of this School application should be able to add and update students, grades, teachers, and courses information.
 
-Instead of designing database tables first, let's start creating classes for our school domain, as and when needed. First, create the `Student` and `Grade` classes where every `Student` is associated with one `Grade` as shown below. This is called a one-to-many relationship. Learn about how EF manages the relationship between entities (domain classes) ![here](https://www.entityframeworktutorial.net/entity-relationships.aspx).
+Instead of designing database tables first, let's start creating classes for our school domain, as and when needed. First, create the `Student` and `Grade` classes where every `Student` is associated with one `Grade` as shown below. This is called a one-to-many relationship. Learn about how EF manages the relationship between entities (domain classes) [here](https://www.entityframeworktutorial.net/entity-relationships.aspx).
 
 ```cs
 public class Student
@@ -48,7 +48,7 @@ public class Grade
 
 Now, we are done with the initial domain classes for our school application.
 
-The Code-First approach also requires a ![context class](https://www.entityframeworktutorial.net/basics/context-class-in-entity-framework.aspx) which should be derived from `DbContext` class. Create a context class as shown below. It derives from `DBContext` class and exposes `DbSet` properties for the types that you want to be part of the model, e.g. `Student` and `Grade` classes in this case. The `DbSet` is a collection of entity classes (aka entity set), so we have given the property name as the plural of entity name like `Students` and `Grades`.
+The Code-First approach also requires a [context class](https://www.entityframeworktutorial.net/basics/context-class-in-entity-framework.aspx) which should be derived from `DbContext` class. Create a context class as shown below. It derives from `DBContext` class and exposes `DbSet` properties for the types that you want to be part of the model, e.g. `Student` and `Grade` classes in this case. The `DbSet` is a collection of entity classes (aka entity set), so we have given the property name as the plural of entity name like `Students` and `Grades`.
 
 ```cs
 namespace EF6Console
@@ -102,6 +102,6 @@ This way, without creating a database first, you can start writing an applicatio
 
 ![pic](https://www.entityframeworktutorial.net/images/codefirst/codefirst-exception.PNG)
 
-You need to define the database initialization strategy in the context class in order to modify domain classes and run the application locally. Learn about it ![here](https://www.entityframeworktutorial.net/code-first/database-initialization-in-code-first.aspx).
+You need to define the database initialization strategy in the context class in order to modify domain classes and run the application locally. Learn about it [here](https://www.entityframeworktutorial.net/code-first/database-initialization-in-code-first.aspx).
 
 
