--- a/Learning C#/Ex_Files_Learning_C_Sharp/Entity Framework/2. EF 6 Code-First/2. Code-First_Conventions.md
+++ b/Learning C#/Ex_Files_Learning_C_Sharp/Entity Framework/2. EF 6 Code-First/2. Code-First_Conventions.md
@@ -1,5 +1,5 @@
 # EF 6 Code-First Conventions
-Conventions are sets of default rules which automatically configure a conceptual model based on your domain classes when working with the Code-First approach. As you have seen in the code-first example in the previous chapter, EF API configured PrimaryKeys, ForeignKeys, relationships, column data types etc. from the domain classes without any additional configurations. This is because of the EF code-first conventions. If they are followed in domain classes, then the database schema will be configured based on the conventions. These EF 6.x Code-First conventions are defined in the ![System.Data.Entity.ModelConfiguration.Conventions](https://learn.microsoft.com/en-us/dotnet/api/system.data.entity.modelconfiguration.conventions?redirectedfrom=MSDN&view=entity-framework-6.2.0) namespace.
+Conventions are sets of default rules which automatically configure a conceptual model based on your domain classes when working with the Code-First approach. As you have seen in the code-first example in the previous chapter, EF API configured PrimaryKeys, ForeignKeys, relationships, column data types etc. from the domain classes without any additional configurations. This is because of the EF code-first conventions. If they are followed in domain classes, then the database schema will be configured based on the conventions. These EF 6.x Code-First conventions are defined in the [System.Data.Entity.ModelConfiguration.Conventions](https://learn.microsoft.com/en-us/dotnet/api/system.data.entity.modelconfiguration.conventions?redirectedfrom=MSDN&view=entity-framework-6.2.0) namespace.
 
 The following table lists default code first conventions:
 
@@ -81,7 +81,7 @@ The following table list C# data types mapped with QSL Server data types.
 ![pic](https://www.entityframeworktutorial.net/images/codefirst/ef6-codefirst-conventions.PNG)
 
 ## Relationship Convention
-EF 6 infers the One-to-Many relationship using the navigation property by default convention. Visit ![Convention for One-to-Many relationship](https://www.entityframeworktutorial.net/code-first/configure-one-to-many-relationship-in-code-first.aspx#conventions-for-one-to-many-ef6) chapter for more information.
+EF 6 infers the One-to-Many relationship using the navigation property by default convention. Visit [Convention for One-to-Many relationship](https://www.entityframeworktutorial.net/code-first/configure-one-to-many-relationship-in-code-first.aspx#conventions-for-one-to-many-ef6) chapter for more information.
 
 **Note:** EF 6 does not include default conventions for One-to-One and Many-to-Many relationships. You need to configure them either using Fluent API or DataAnnotation.
 
