--- a/Learning C#/Ex_Files_Learning_C_Sharp/Entity Framework/2. EF 6 Code-First/3. DB_Initialization.md
+++ b/Learning C#/Ex_Files_Learning_C_Sharp/Entity Framework/2. EF 6 Code-First/3. DB_Initialization.md
@@ -1,5 +1,5 @@
 # Database Initialization in Entity Framework 6
-We have seen that Code-First creates a database automatically in the ![Simple Code First](https://www.entityframeworktutorial.net/code-first/simple-code-first-example.aspx) Example section. Here, we will learn how EF decides the database name and server while initializing a database in code-first approach.
+We have seen that Code-First creates a database automatically in the [Simple Code First](https://www.entityframeworktutorial.net/code-first/simple-code-first-example.aspx) Example section. Here, we will learn how EF decides the database name and server while initializing a database in code-first approach.
 
 The following figure shows a database initialization workflow, based on the parameter passed in the base constructor of the context class, which is derived from DbContext:
 
